--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+	<title>Speech Analysis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style>
+		.container{
+			margin-top: 2rem;
+		}
+		
+		#sampleRate{
+			padding-top: 1rem;
+		}
+		#hasil{
+			font-size: 22pt;
+		}
+	</style>
 </head>
 
 <body>
-    <button id="button_record">Record</button>
-    <button id="button_stop" disabled>Stop</button>
-    <p id="sampleRate">Sample Rate = </p>
-    <p><strong>Hasil:</strong></p>
-    <ul id="recordingsList"></ul>
-    <p id="hasil"></p>
-    <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
+	<div class="container">
+		<div class="row gx-5">
+            <div class="col-10">
+                <h1>Voice to Text</h1>
+                <p>Project for Speech Processing</p>
+            </div>
+        </div>
+		<hr>
+		<div class="row">
+			<div class="col-12">
+				<p><strong>Input Voice (.wav):</strong></p>
+    			<button id="button_record" class="btn btn-dark">Record</button>
+    			<button id="button_stop" class="btn btn-dark" disabled>Stop</button><br>
+    			<p id="sampleRate">Sample Rate = </p>
+				<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
+    			<p><strong>Hasil Record:</strong></p><br>
+				<ul id="recordingsList"></ul>
+			</div>
+			<di class="col-12">
+				<h3>Hasil:</h3>
+				<p id="hasil"></p>
+			</di>
+			
+		</div>
+
+		
+    </div>
 </body>
+</html>
 <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
 <script>
 // SAUCE SECTION
@@ -136,4 +172,4 @@ function createDownloadLink(blob) {
 	recordingsList.appendChild(li);
 }
 </script>
-</html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
