--- a/templates/index.html
+++ b/templates/index.html
@@ -30,16 +30,16 @@
 		<hr>
 		<div class="row">
 			<div class="col-12">
-				<p><strong>Input Voice (.wav):</strong></p>
+				<p><strong>Record ur voice :</strong></p>
     			<button id="button_record" class="btn btn-dark">Record</button>
     			<button id="button_stop" class="btn btn-dark" disabled>Stop</button><br>
     			<p id="sampleRate">Sample Rate = </p>
 				<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
-    			<p><strong>Hasil Record:</strong></p><br>
+    			<p><strong>Record result:</strong></p><br>
 				<ul id="recordingsList"></ul>
 			</div>
 			<di class="col-12">
-				<h3>Hasil:</h3>
+				<h3>Analysis :</h3>
 				<p id="hasil"></p>
 			</di>
 			
@@ -50,126 +50,14 @@
 </body>
 </html>
 <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-<script>
-// SAUCE SECTION
-
-// sauce = https://blog.addpipe.com/using-recorder-js-to-capture-wav-audio-in-your-html5-web-site/
-// sauce = https://github.com/addpipe/simple-recorderjs-demo
-// sauce = https://codepen.io/naicuoctavian/embed/GRgzqBg?height=265&theme-id=default&default-tab=js%2Cresult&user=naicuoctavian&slug-hash=GRgzqBg&pen-title=Audio%20Recording%20with%20MediaStream%20Recorder%20API&name=cp_embed_1
-// sauce = https://programmierfrage.com/items/save-audio-file-specific-folder-on-server
-// sauce = https://ourcodeworld.com/articles/read/499/how-to-record-and-export-audio-wav-and-mp3-using-recorder-js-in-html5
-// sauce = https://forum.arduino.cc/t/getusermedia-and-recorder-js-for-save-blob-wav-in-sd-with-php/260564
-
-URL = window.URL || window.webkitURL;
-
-var gumStream; //variable dari getUserMedia()
-var rec; // variable recorderjs
-var input; 
-
-var AudioContext = window.AudioContext || window.webkitAudioContext;
-var audioContext;
-
-var recordButton = document.getElementById("button_record");
-var stopButton = document.getElementById("button_stop");
-
-recordButton.addEventListener("click", startRecording);
-stopButton.addEventListener("click", stopRecording);
-
-function startRecording() {
-	console.log("button_record clicked");
-    var constraints = { audio: true, video:false }
-
-    // kalo lagi record stop button on
-    recordButton.disabled = true;
-	stopButton.disabled = false;
-
-    navigator.mediaDevices.getUserMedia(constraints).then(function(stream) {
-
-        gumStream = stream;
-        audioContext = new AudioContext();
-
-        // untuk update sample rate yang dibaca pake audio.sampleRate
-        document.getElementById("sampleRate").innerHTML="Sample Rate =  1 channel pcm @ "+audioContext.sampleRate/1000+"kHz"
-
-        input = audioContext.createMediaStreamSource(stream);
-
-        rec = new Recorder(input,{numChannels:1})
-
-        rec.record()
-
-		console.log("Recording started");
-    }).catch(function(err) {
-        // kalo ada gagal record buttonnya d enable lagi
-    	recordButton.disabled = false;
-    	stopButton.disabled = true;
-	});
-
-}
-
-function stopRecording() {
-	console.log("button_stop clicked");
-    stopButton.disabled = true;
-	recordButton.disabled = false;
-
-    // ngestop record
-    rec.stop();
-
-    // nutup mic
-    gumStream.getAudioTracks()[0].stop();
-
-
-    // export audionya
-    rec.exportWAV(createDownloadLink);
-}
-
-function createDownloadLink(blob) {
-
-    var url = URL.createObjectURL(blob);
-	var filename = new Date().toISOString();
-	var link = document.createElement('a');
-	var au = document.createElement('audio');
-	var li = document.createElement('li');
-
-	au.controls = true;
-	au.src = url;
-
-    link.href = url;
-	link.download = filename+".wav";
-	link.innerHTML = "Save to disk";
-
-	//add the new audio element to li
-	li.appendChild(au);
-	
-	//add the filename to the li
-	li.appendChild(document.createTextNode(filename+".wav "))
-
-	//add the save to disk link to li
-	li.appendChild(link);
-
-    //  lempar ke html pake js ke p id hasil
-    var upload = document.createElement('a');
-	upload.href="#";
-	upload.innerHTML = "Upload";
-
-    upload.addEventListener("click", function(event){
-		  var fd=new FormData();
-		  fd.append("audio_data",blob, filename);
-		  $.ajax({
-	   	    type: "POST",
-	   	    url: "/process",
-	   	    data: fd,
-	   	    processData: false,
-            contentType: false,
-	   	    success: function(data){
-                $('#hasil').html('U said = ' + data);
-	   	    }
-	    });
-	})
-	li.appendChild(document.createTextNode (" "))//add a space in between
-	li.appendChild(upload)//add the upload link to li
-
-	//add the li element to the ol
-	recordingsList.appendChild(li);
-}
-</script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/main_js.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- SAUCE SECTION
+
+sauce = https://blog.addpipe.com/using-recorder-js-to-capture-wav-audio-in-your-html5-web-site/
+sauce = https://github.com/addpipe/simple-recorderjs-demo
+sauce = https://codepen.io/naicuoctavian/embed/GRgzqBg?height=265&theme-id=default&default-tab=js%2Cresult&user=naicuoctavian&slug-hash=GRgzqBg&pen-title=Audio%20Recording%20with%20MediaStream%20Recorder%20API&name=cp_embed_1
+sauce = https://programmierfrage.com/items/save-audio-file-specific-folder-on-server
+sauce = https://ourcodeworld.com/articles/read/499/how-to-record-and-export-audio-wav-and-mp3-using-recorder-js-in-html5
+sauce = https://forum.arduino.cc/t/getusermedia-and-recorder-js-for-save-blob-wav-in-sd-with-php/260564 -->
