Add Feature Extraction MFCC

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,10 @@
     			<p><strong>Record result:</strong></p><br>
 				<ul id="recordingsList"></ul>
 			</div>
-			<di class="col-12">
+			<div class="col-12">
 				<h3>Analysis :</h3>
 				<p id="hasil"></p>
-			</di>
+			</div>
 			
 		</div>
 
